--- a/css/lucascss.css
+++ b/css/lucascss.css
@@ -3,7 +3,7 @@
   position: fixed;
   width: 100%;
   height: 350px; /*same height as jumbotron */
-  top:50;
+  /*top:50;*/
   left:0;
   z-index: -1;
 }
@@ -16,7 +16,7 @@
   /*position: fixed;
   height: 350px; same height as jumbotron 
   top:0;
-  left:0;*/
+  */
   z-index: -1;
 }
 
