--- a/css/lucascss.css
+++ b/css/lucascss.css
@@ -1,4 +1,4 @@
-.bg {
+.topimage {
   background: url('../images/tallship.JPG') no-repeat center center;
   position: fixed;
   width: 100%;
@@ -8,7 +8,7 @@
   z-index: -1;
 }
 
-.bg2 {
+.secondimage {
   background: url('../images/test.JPG') no-repeat center center;
   width: 100%;
   height: 0px;
