--- a/css/lucascss.css
+++ b/css/lucascss.css
@@ -12,7 +12,7 @@
   background: url('../images/test.JPG') no-repeat center center;
   width: 100%;
   height: 0px;
-  -webkit-filter: blur(5px) brightness(0.5);
+  /*-webkit-filter: blur(5px) brightness(0.5);*/
   /*position: fixed;
   height: 350px; same height as jumbotron 
   top:0;
