--- a/css/lucascss.css
+++ b/css/lucascss.css
@@ -49,7 +49,7 @@ body {
 }
 
 .blueBrick {
-    background-color: #23C9FF;
+    background-color: blue;
 /*    background-color: #75AB00;*/
     /*background-color:rgba(65, 246, 246, 0.54);*/
 }
